fix z-index for nav menu buttons on index page

--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -729,10 +729,6 @@ select {
   top: 1rem;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
